--- a/package.json
+++ b/package.json
@@ -3,9 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@types/react": "^16.8.7",
     "react": "^16.8.4",
+    "react-dnd": "^7.1.0",
+    "react-dnd-html5-backend": "^7.1.0",
     "react-dom": "^16.8.4",
-    "react-scripts": "2.1.8"
+    "react-drag-and-drop": "^3.0.0",
+    "react-scripts": "2.1.8",
+    "typescript": "^3.3.3333"
   },
   "scripts": {
     "start": "react-scripts start",
